<resources>
    <string name="app_name">NativeTest</string>
    <string name="action_settings">Settings</string>
    <string name="start_effect">Start</string>
    <string name="stop_effect">Stop</string>
    <string name="need_record_audio_permission">"This sample needs RECORD_AUDIO permission"</string>
    <string name="status_playing">Engine Playing ....</string>
    <string name="status_open_failed">Engine Failed to Open Streams!</string>
    <string name="status_record_audio_denied">Error: Permission for RECORD_AUDIO was denied</string>
    <string name="status_touch_to_begin">RECORD_AUDIO permission granted, touch START to begin</string>
    <string name="status_warning">Warning: If you run this sample using the built-in microphone
        and speaker you may create a feedback loop which will not be pleasant to listen to.</string>
    <string name="recording_device">Recording device</string>
    <string name="playback_device">Playback device</string>

    <string name="apiSelection">APIs</string>
    <string name="aaudio">AAudio</string>
    <string name="sles">OpenSL ES</string>

    <string name="tau">Tau value</string>
    <string name="tau1">0.0001</string>
    <string name="tau2">0.001</string>
    <string name="tau3">0.01</string>
    <string name="tau4">0.5</string>

    <string name="nrSelection">Noise reduction</string>
</resources>